Swagger funcionando
Todos os métodos de ambos os controllers estão funcionando no Swagger
